--- a/css/login.css
+++ b/css/login.css
@@ -14,7 +14,7 @@ main{
     font-family:Verdana, Geneva, Tahoma, sans-serif ;
 }
 
-img{
+#logo{
     margin-top: 91.3px;
     margin-left: 123.73px;
 }
@@ -52,5 +52,10 @@ input{
     background-color: #3C3A3C;
     margin-left: 90px;
     margin-top: 98px;
+    font-size: 13px;
+}
+#icone{
+    margin-top: -33px;
+    margin-left: 280px;
 }
 
