--- a/css/login.css
+++ b/css/login.css
@@ -53,7 +53,7 @@ input{
     margin-left: 90px;
     margin-top: 98px;
     font-size: 13px;
-    cursor: pointer;
+    cursor: pointer !important;
 }
 #icone{
     margin-top: -33px;
