--- a/css/clientes.css
+++ b/css/clientes.css
@@ -93,14 +93,19 @@ section{
     text-decoration: none;
 }
 table{
+    width: 90%;
     margin: auto;
+    
+}
+.coluna{
     background-color: #3C3A3C;
     color: #FEFEFE;
-    width: 90%;
     height: 29px;
     text-align: center;
     align-items: center;
     font-size: 12px;
+    border-radius: 8px 8px 0px 0px ;
+    
     
 }
 td{
