--- a/css/alterar.css
+++ b/css/alterar.css
@@ -66,6 +66,11 @@ section{
     width: 90%;
     background-color:#EDF0EF;
 }
+.principal img{
+    transform: rotateY(180deg);
+    width: 8px;
+    height: 13px;
+}
 .topo_tabela{
     display: flex;
     flex-direction: row;
@@ -93,49 +98,29 @@ section{
     text-decoration: none;
 }
 table{
-    width: 90%;
+    width: 95%;
     margin: auto;
     font-size: 12px;
-    text-align: center;
+    
 }
 .coluna{
     background-color: #3C3A3C;
     color: #FEFEFE;
     height: 29px;
     align-items: center;
-    border-radius: 8px;
 }
-.borda{
-    border-radius: 8px 0 0 0;
+.coluna td{
+    padding: 10px;
+    border-radius: 8px 8px 0 0;
 }
-.borda_final{
-    border-radius: 0 8px 0 0;
+form{
+    background-color: yellow;
+    width: 95%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
 }
-.conteudo{
-    background-color: #FFFFFF;
-}
-.conteudo td{
-    padding: 5px;
-    align-items: center;
-}
-.botoes{
+form div{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-}
-.botoes a{
-    width: 38px;
-    height: 20px;
-    font-size: 10px;
-    text-decoration: none;
-    color: #FFFFFF;
-    background-color:#FEAA29 ;
-    border-radius: 8px;
-    padding-top: 2px;
-}
-.botoes button{
-    background-color: red;
-    border: none;
-    border-radius: 8px;
-    color: white;
 }
