--- a/css/clientes.css
+++ b/css/clientes.css
@@ -13,7 +13,7 @@ header{
     height: 50.47px;
 }
 .logo img{
-    width: 109px;
+    width: 50%;
     height: 37px;
     margin-left:25%;
     margin-top: 4.73px;
