--- a/css/alterar.css
+++ b/css/alterar.css
@@ -137,7 +137,7 @@ form div{
     margin-right: 10px;
     margin-bottom: 20px;
 }
-form input, select{
+form input{
     width:100%;
     height: 30px;
     padding-left: 15px;
