--- a/css/alterar.css
+++ b/css/alterar.css
@@ -137,7 +137,7 @@ form div{
     margin-right: 10px;
     margin-bottom: 20px;
 }
-form input{
+form input, select{
     width:100%;
     height: 30px;
     padding-left: 15px;
@@ -148,7 +148,7 @@ form input{
 #status{
     color: black;
 }
-#salvar{
+#salvar, #alterar{
     width: 132px;
     height: 31px;
     border-radius: 8px;
@@ -165,4 +165,8 @@ form input{
 }
 .salvar div{
     width: 90%;
+}
+.disabled{
+    background-color: #EBEBE4;
+    cursor: not-allowed !important;
 }
